Fix: Align NaviButton heights (#524)

--- a/packages/core/app/styles/navi-core/components/navi-button.less
+++ b/packages/core/app/styles/navi-core/components/navi-button.less
@@ -3,6 +3,10 @@
  * Licensed under the terms of the MIT license. See accompanying LICENSE.md file for terms.
  */
 
+@navi-button-border-width: 1px;
+@navi-button-top-bottom-padding: 5px;
+@navi-button-side-padding: 5px;
+
 .navi-button {
   align-items: center;
   border-radius: 2px;
@@ -13,13 +17,14 @@
   justify-content: center;
   margin: 0px;
   min-width: 120px;
-  padding: 5px 10px;
+  padding: @navi-button-top-bottom-padding @navi-button-side-padding;
   transition: 300ms;
 
   &--primary {
     background: linear-gradient(to right, @denali-brand-600, @denali-brand-700);
     color: @navi-white;
     min-width: 120px;
+    padding: (@navi-button-top-bottom-padding + @navi-button-border-width) @navi-button-side-padding;
 
     &:hover {
       background: linear-gradient(to right, @denali-brand-700, @denali-brand-800);
@@ -37,7 +42,7 @@
     background: transparent;
     border-color: @denali-brand-600;
     border-style: solid;
-    border-width: 1px;
+    border-width: @navi-button-border-width;
     color: @denali-brand-600;
 
     &:hover {
